# xai-eval-sandbox

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/xai_eval/: explainers.py
src/xai_eval/degradation/: drift.py  noise.py  quantize.py
src/xai_eval/metrics/: jaccard.py  rbo.py
src/xai_eval/pipeline/: evaluator.py
tests/: test_degradation.py  test_metrics.py  test_pipeline.py
